--- a/lesson2.html
+++ b/lesson2.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BT lesson2</title>
+    <title>lesson2</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-    Hi
+    <h1>BTVN LESSON2</h1>
+    <div class="container">
+        <div class="input-box1">
+            <div class="col-6">
+                <label for="Email">Email</label>
+                <br>
+                <input type="text">
+            </div>
+            <div class="col-6">
+                <label for="Password">Password</label>
+                <br>
+                <input type="text">
+            </div>
+        </div>
+        <div class="input-box2">
+            <label for="Address">Address</label>
+            <br>
+            <input type="text" placeholder="1234 Main St">
+        </div>
+        <div class="input-box3">
+            <label for="Address 2">Address 2</label>
+            <br>
+            <input type="text" placeholder="Apartment, studio, or floor">
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <label for="City">City</label>
+                <br>
+                <input type="text">
+            </div>
+            <div class="col-4">
+                <label for="State">State</label>
+                <br>
+                <select id="State">
+                    <option value="Choose...">Choose...</option>
+                    <option value="Viet Nam">Viet Nam</option>
+                    <option value="Lao">Lao</option>
+                    <option value="Campuchia">Campuchia</option>
+                </select>
+            </div>
+            <div class="clol-2">
+                <label for="Zip">Zip</label>
+                <br>
+                <input type="zip">
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="input-box4">
+            <input type="checkbox" id="Check me out">
+            <label for="Check me out">Check me out</label>
+        </div>
+        <div class="btn-box">
+            <a href="#" class="button">Sign in</a>
+        </div>
+
+
+
+    </div>
 </body>
+
 </html>
