--- a/lesson32.html
+++ b/lesson32.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lesson3-2</title>
     <link rel="stylesheet" type="text/css" href="style32.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 
 </head>
 
@@ -15,21 +16,21 @@
     <h2>BAI 2</h2>
     <header>
         <div class="container">
-        <a href="#" class="logo"> <b> START BOOTSTRAP </b></a>
-        <ul class="main-nav">
-            <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
-        </ul>
-        <div class="clearfix"></div>
-    </div>
+            <a href="#" class="logo"> <b> START BOOTSTRAP </b></a>
+            <ul class="main-nav">
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+            <div class="clearfix"></div>
+        </div>
         <div class="heading-main-box">
             <h1> <b> CONTACT ME </b> </h1>
-          <div class="icon">
-            <div class="icon-star">
-                <i class="fa fa-star"></i>
+            <div class="icon">
+                <div class="icon-star">
+                    <i class="fa fa-star"></i>
+                </div>
             </div>
-        </div>
             <div class="input-box">
                 <label for="Name"></label><input type="text" placeholder="Name">
                 <br>
