--- a/Lesson31.html
+++ b/Lesson31.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lesson3-1</title>
-    <link rel="stylesheet" type="text/css" href="style31.css">
+    <link rel="stylesheet" type="text/css" href="./css_all/style31.css">
 </head>
 
 <body>
