--- a/ls5.html
+++ b/ls5.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LESSON6-ARRAY-OBJECT</title>
+    <title>LESSON5-ARRAY-OBJECT</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/lesson5.css">
+    <link rel="stylesheet" href="./css/ls5.css">
 </head>
 
 <body>
@@ -17,9 +17,10 @@
     <br>
     <p id="snt">Before</p>
     <button type="button" onclick="number2()">Try it</button>
-    <h1>
+
+    <h2>
         <center>LESSON5 - JAVASCRIPT - Danh sach lop</center>
-    </h1>
+    </h2>
     <div class="container bg-warning">
         <table class="table table-bordered text-center table-hover">
             <thead class="table-info">
@@ -36,8 +37,7 @@
             </div>
         </div>
     </div>
-    </div>
-    <script src="./js/js5.js"></script>
+    <script src="./js/lesson5.js"></script>
 </body>
 
 </html>
