Jquery showNumberStudent after 1 Click Button

--- a/Jquery1-1.html
+++ b/Jquery1-1.html
@@ -29,7 +29,7 @@
         <div class="clearfix"></div>
         <button type="button" class="btn-secondary" id="button"
         >
-        Loadmore
+        LoadMore
         </button>
         <div class="clearfix"></div>
     </div>
