--- a/Lesson10/Lesson10.html
+++ b/Lesson10/Lesson10.html
@@ -87,10 +87,10 @@
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Products</li>
                 <li class="offset-md-9">
-                    <select class="form-control form-control-sm" id="orderProduct">
-                        <option id="orderBy">Order By</option>
-                        <option id="decrease">Decrease</option>
-                        <option id="increase">Increase</option>
+                    <select class="form-control form-control-sm" id="sortProduct">
+                        <option>Order By</option>
+                        <option value="decrease" >Decrease</option>
+                        <option value="increase" >Increase</option>
                     </select>
                 </li>
             </ol>
@@ -103,9 +103,9 @@
                     <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
                         alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Vuong 2017</h4>
+                        <h4 class="card-title">Asus 2017</h4>
                         <p class="card-text">
-                            <i class="sale-off">$1000</i> -> <i>$500</i>
+                            <i class="sale-off">$1200</i> -> <i>$500</i>
                         </p>
                         <p>Description</p>
                         <a href="#" class="btn btn-primary">Buy</a>
@@ -120,7 +120,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Macbook 2020</h4>
                         <p class="card-text">
-                            <i>$544</i>
+                            <i>$545</i>
                         </p>
                         <p>Long</p>
                         <a href="#" class="btn btn-primary">Buy</a>
@@ -133,9 +133,9 @@
                     <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
                         alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Iphone15</h4>
+                        <h4 class="card-title">Iphone 15</h4>
                         <p class="card-text">
-                            <i>$1000</i>
+                            <i>$2100</i>
                         </p>
                         <p>Description</p>
                         <a href="#" class="btn btn-primary">Buy</a>
@@ -148,9 +148,9 @@
                     <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
                         alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
+                        <h4 class="card-title">Macbook 2022</h4>
                         <p class="card-text">
-                            <i>$1000</i>
+                            <i>$1400</i>
                         </p>
                         <p>Description</p>
                         <a href="#" class="btn btn-primary">Buy</a>
@@ -165,7 +165,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Macbook 2017</h4>
                         <p class="card-text">
-                            <i class="sale-off">$1000</i> -> <i>$500</i>
+                            <i class="sale-off">$900</i> -> <i>$500</i>
                         </p>
                         <p>Description</p>
                         <a href="#" class="btn btn-primary">Buy</a>
@@ -173,6 +173,123 @@
                 </div>
             </div>
 
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Macbook 2021</h4>
+                        <p class="card-text">
+                            <i>$1100</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Iphone 13 pro</h4>
+                        <p class="card-text">
+                            <i>$1150</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Iphone 14</h4>
+                        <p class="card-text">
+                            <i>$1300</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Macbook 2018</h4>
+                        <p class="card-text">
+                            <i>$900</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Iphone 11</h4>
+                        <p class="card-text">
+                            <i>$700</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Asus 2021</h4>
+                        <p class="card-text">
+                            <i>$950</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Dell 2017</h4>
+                        <p class="card-text">
+                            <i>$400</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3 mb-3 product">
+                <div class="card" style="">
+                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+                        alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Asus Vivobook 2021</h4>
+                        <p class="card-text">
+                            <i>$850</i>
+                        </p>
+                        <p>Description</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </div>
+            </div>
             <div class="col-sm-3 mb-3 product">
                 <div class="card" style="">
                     <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
@@ -180,7 +297,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Macbook 2020</h4>
                         <p class="card-text">
-                            <i>$1000</i>
+                            <i>$1200</i>
                         </p>
                         <p>Description</p>
                         <a href="#" class="btn btn-primary">Buy</a>
@@ -193,35 +310,7 @@
                     <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
                         alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Iphone15</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">Macbook 2020</h4>
+                        <h4 class="card-title">Iphone 12 Pro</h4>
                         <p class="card-text">
                             <i>$1000</i>
                         </p>
@@ -236,98 +325,9 @@
                     <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
                         alt="Card image" style="width:100%">
                     <div class="card-body">
-                        <h4 class="card-title">Iphone15</h4>
+                        <h4 class="card-title">Dell 2022</h4>
                         <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">Iphone15</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">Macbook 2020</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">Iphone15</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
-                        </p>
-                        <p>Description</p>
-                        <a href="#" class="btn btn-primary">Buy</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-3 mb-3 product">
-                <div class="card" style="">
-                    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
-                        alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">
-                            <i>$1000</i>
+                            <i>$980</i>
                         </p>
                         <p>Description</p>
                         <a href="#" class="btn btn-primary">Buy</a>
@@ -337,7 +337,7 @@
         </div>
         <hr>
         <nav aria-label="...">
-            <ul class="pagination pagination-sm">
+            <ul class="pagination pagination-sm" id="paginate">
               
             </ul>
           </nav>
